--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,9 @@ spring:
     url: r2dbc:mysql://localhost:3306/ecommerce?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
     username: root
     password: root
-
+  redis:
+    host: localhost
+    port: 6379
 logging:
   level:
     org.springframework.r2dbc.core: debug
